--- a/plugins/build.gradle
+++ b/plugins/build.gradle
@@ -1,7 +1,9 @@
 apply plugin: 'java'
+apply plugin: 'application'
 
 sourceCompatibility = '1.8'
 version = '1.0'
+mainClassName = 'Main'
 
 jar {
     manifest {
